--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,9 @@
 # Learn more about .gitignore:
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
+# User files
+*.user
+
 # Node artifact files
 node_modules/
 dist/
