--- a/tests/requests/CMakeLists.txt
+++ b/tests/requests/CMakeLists.txt
@@ -1,11 +1,19 @@
 include(CTest)
-
 project(XMLHttpRequestTests)
 
-add_executable(test0 requests_test.cpp)
+include_directories(${CMAKE_PROJECT_NAME} PUBLIC ${LIB_INCLUDE_PATH})
+link_libraries(XMLHttpRequest)
 
-enable_testing()
-add_test(NAME requests_unit_test COMMAND requests_test)
-set_tests_properties(requests_unit_test PROPERTIES WILL_FAIL TRUE)
+add_executable(get_request_test get_request_test.cpp)
+add_test(NAME get_request_unit_test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/get_request_test)
+set_tests_properties(get_request_unit_test PROPERTIES WILL_FAIL FALSE)
+
+add_executable(post_request_test post_request_test.cpp)
+add_test(NAME post_request_unit_test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/post_request_test)
+set_tests_properties(post_request_unit_test PROPERTIES WILL_FAIL FALSE)
+
+
+#message(----------->${LIB_INCLUDE_PATH})
+
 
 #https://developer.mantidproject.org/RunningTheUnitTests.html
