Writing the source code of the GET request test is complete

--- a/tests/requests/CMakeLists.txt
+++ b/tests/requests/CMakeLists.txt
@@ -5,12 +5,14 @@ include_directories(${CMAKE_PROJECT_NAME} PUBLIC ${LIB_INCLUDE_PATH})
 link_libraries(XMLHttpRequest)
 
 add_executable(get_request_test get_request_test.cpp)
-add_executable(post_request_test post_request_test.cpp)
+#add_executable(post_request_test post_request_test.cpp)
 
 add_test(NAME get_request_unit_test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/get_request_test)
-set_tests_properties(get_request_unit_test PROPERTIES WILL_FAIL FALSE)
+#set_tests_properties(get_request_unit_test PROPERTIES WILL_FAIL FALSE)
+set_tests_properties(get_request_unit_test PROPERTIES PASS_REGULAR_EXPRESSION "Status code: 200")
 
-add_test(NAME post_request_unit_test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/post_request_test)
-set_tests_properties(post_request_unit_test PROPERTIES WILL_FAIL FALSE)
+#add_test(NAME post_request_unit_test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/post_request_test)
+#set_tests_properties(post_request_unit_test PROPERTIES WILL_FAIL FALSE)
+#set_tests_properties(post_request_unit_test PROPERTIES PASS_REGULAR_EXPRESSION "Status code: 200")
 
 #https://developer.mantidproject.org/RunningTheUnitTests.html
