--- a/tests/requests/CMakeLists.txt
+++ b/tests/requests/CMakeLists.txt
@@ -25,10 +25,17 @@ add_test(NAME get_request_unit_test COMMAND ${CMAKE_CURRENT_BINARY_DIR}/get_requ
 
 set_tests_properties(host_avail_test PROPERTIES FIXTURES_SETUP PingHost)
 set_tests_properties(host_avail_test PROPERTIES PASS_REGULAR_EXPRESSION "Passed")
-set_tests_properties(get_request_unit_test PROPERTIES FIXTURES_REQUIRED RunTests)
+set_tests_properties(get_request_unit_test PROPERTIES FIXTURES_REQUIRED PingHost)
 set_tests_properties(get_request_unit_test PROPERTIES PASS_REGULAR_EXPRESSION "Status code: 200")
 
 #set_tests_properties(post_request_unit_test PROPERTIES WILL_FAIL FALSE)
 #set_tests_properties(post_request_unit_test PROPERTIES PASS_REGULAR_EXPRESSION "Status code: 200")
 
 #https://developer.mantidproject.org/RunningTheUnitTests.html
+
+#--------------------------------------------------------------------
+# Post build steps
+#--------------------------------------------------------------------
+add_custom_command(TARGET host_avail_test POST_BUILD
+    COMMAND chmod -v +s ${CMAKE_CURRENT_BINARY_DIR}/host_avail_test
+)
