Clang 13 compile error was fixed

--- a/tests/requests/CMakeLists.txt
+++ b/tests/requests/CMakeLists.txt
@@ -2,7 +2,7 @@ include(CTest)
 project(XMLHttpRequestTests)
 
 include_directories(${CMAKE_PROJECT_NAME} PUBLIC ${LIB_INCLUDE_PATH})
-link_libraries(XMLHttpRequest)
+link_libraries(XMLHttpRequest stdc++)
 
 #--------------------------------------------------------------------
 # Executable
